# sas-to-polars

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/sas_to_polars/: __init__.py  sas_to_polars.py
tests/: generate_test_data.sas  test_sas_to_polars.py
tests/test_data/: empty_data.sas7bdat  valid_data.sas7bdat
