[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sas-to-polars"
version = "1.0.0"
description = "Convert SAS datasets (.sas7bdat files) to Polars DataFrames."
authors = [{ name = "Samuel E Edwards", email = "elijah.edwards41@gmail.com" }]
keywords = ["sas", "polars", "data conversion", "data processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",  # Or your chosen license
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.10"
license = { file="LICENSE" }
dependencies = [
    "pyreadstat>=0.12.0",
    "polars>=0.20.0",
    "pyarrow>=10.0.0"
]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/samuel-elijah-edwards/sas-to-polars"
"Bug Tracker" = "https://github.com/samuel-elijah-edwards/sas-to-polars/issues"
